Set ports to null for celeryworker and celerybeat services

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -59,6 +59,7 @@ services:
     depends_on:
       - redis
       - postgres
+    ports: null
     command: /start-celeryworker
 
   celerybeat:
@@ -68,6 +69,7 @@ services:
     depends_on:
       - redis
       - postgres
+    ports: null
     command: /start-celerybeat
 
   flower:
