--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -21,6 +21,7 @@ services:
     ports:
       - '8000:8000'
     command: /start
+
   tailwind:
     image: node:20-slim
     container_name: real_time_django_local_tailwind
@@ -32,6 +33,7 @@ services:
     stdin_open: true
     depends_on:
       - django
+
   postgres:
     build:
       context: .
@@ -47,35 +49,55 @@ services:
   redis:
     image: docker.io/redis:6
     container_name: real_time_django_local_redis
-    
     volumes:
       - real_time_django_local_redis_data:/data
-    
 
   celeryworker:
-    <<: *django
+    build:
+      context: .
+      dockerfile: ./compose/local/django/Dockerfile
     image: real_time_django_local_celeryworker
     container_name: real_time_django_local_celeryworker
     depends_on:
       - redis
       - postgres
-    ports: []
+    volumes:
+      - .:/app:z
+    env_file:
+      - ./.envs/.local/.django
+      - ./.envs/.local/.postgres
     command: /start-celeryworker
 
   celerybeat:
-    <<: *django
+    build:
+      context: .
+      dockerfile: ./compose/local/django/Dockerfile
     image: real_time_django_local_celerybeat
     container_name: real_time_django_local_celerybeat
     depends_on:
       - redis
       - postgres
-    ports: []
+    volumes:
+      - .:/app:z
+    env_file:
+      - ./.envs/.local/.django
+      - ./.envs/.local/.postgres
     command: /start-celerybeat
 
   flower:
-    <<: *django
+    build:
+      context: .
+      dockerfile: ./compose/local/django/Dockerfile
     image: real_time_django_local_flower
     container_name: real_time_django_local_flower
+    depends_on:
+      - redis
+      - postgres
+    volumes:
+      - .:/app:z
+    env_file:
+      - ./.envs/.local/.django
+      - ./.envs/.local/.postgres
     ports:
       - '5555:5555'
     command: /start-flower
